--- a/DESAFIOS/readme
+++ b/DESAFIOS/readme
@@ -1,5 +1,1 @@
-Descargar imagen de Internet
-
-URL
-
-https://oneftbl-cms.imgix.net/https%3A%2F%2Ffulbodivino.wordpress.com%2Fwp-content%2Fuploads%2F2024%2F03%2Fbombonera-boca.webp?auto=format%2Ccompress&crop=faces&dpr=2&fit=crop&h=210&q=25&w=280&s=eaf4b572bd25c189c3203eb4916b727e
+Desafios
